--- a/config-repo/application-dev.properties
+++ b/config-repo/application-dev.properties
@@ -1,10 +1,10 @@
 # sleuth
 spring.sleuth.sampler.percentage=1.0
 spring.rabbitmq.host=rabbitmq.docker.com
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#spring.rabbitmq.virtualHost=/
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtualHost=/
 logging.level.org,springframework.cloud.sleuth=DEBUG
 
 author=OF2547
