--- a/config-repo/application-dev.properties
+++ b/config-repo/application-dev.properties
@@ -3,7 +3,7 @@ spring.rabbitmq.host=rabbitmq.docker.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.rabbitmq.virtualHost=bs-erdaoya
+spring.rabbitmq.virtualHost=/
 logging.level.org,springframework.cloud.sleuth=DEBUG
 
 author=zhaozhou
